# slurm-auto-array

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac
lib/: task.sh
libexec/: slurm_auto_array.py  slurm_auto_array.py.in  task.sh  work_unit.py
share/man/man1/: slurm-auto-array.1  slurm-auto-array.1.md
test/: test.bats
